--- a/install_apache.yml
+++ b/install_apache.yml
@@ -4,36 +4,10 @@
   become: true
   tasks:
 
-  - name: update repository index for Ubuntu
-    apt:
-      update_cache: yes 
-    when: ansible_distribution == "Ubuntu"
-
-  - name: install apache2 package for Ubuntu
-    apt:
-      name: apache2
+  - name: install apache and php packages
+    package:
+      name: 
+        - "{{ apache_package }}"
+        - "{{ php_package }}"
       state: latest
-    when: ansible_distribution == "Ubuntu"
-   
-  - name: add php support for apache for Ubuntu
-    apt:
-      name: libapache2-mod-php
-      state: latest
-    when: ansible_distribution == "Ubuntu"
-
-  - name: update repository index for CentOS
-    dnf:
       update_cache: yes
-    when: ansible_distribution == "CentOS"
-
-  - name: install httpd package for CentOS
-    dnf:
-      name: httpd
-      state: latest
-    when: ansible_distribution == "CentOS"
-
-  - name: add php support for apache for CentOS
-    dnf:
-      name: php
-      state: latest
-    when: ansible_distribution == "CentOS"
